Fixup compare and timing_HSVFest.conf
timing_HSVFest.conf
  Added comments
  fixed formatting
  added a  save_ver  field this should match the
  old version when making changes from a web page
  designed to detect that the file changed underneath.

--- a/etc/timing/timing_HSVFest.conf
+++ b/etc/timing/timing_HSVFest.conf
@@ -1,34 +1,43 @@
-
+%YAML 1.2
+---
+# Path to the sqlite database
 database_path: "/data/Track_Time/Track_Time.db"
 
+# Defing which gpio inputs tie to which function
+# The default is trigger on rising edge (signal on) can 
+# change to use the falling edge
 timing:
   inputs:
     button: 
         gpio: 17
-        falling_edge: no
+        falling_edge: false
 
     green: 
         gpio: 23
-        falling_edge: no
+        falling_edge: false
         
     start: 
         gpio: 24
-        falling_edge: yes
+        falling_edge: true
         
     finish: 
         gpio: 25
-        falling_edge: no
+        falling_edge: false
 
-  debug: no
+  debug: false
 
+# Configure what static html result pages to generate
 results:
   web_base: "/var/www/html/HSV_Timing/"
   php_base: "/var/www/html/HSV_Timing/management/"
   static_base: "/var/www/html/HSV_Timing/Results/"
   static_refresh: 60
-  runners_only: no
+  runners_only: false
   result_types:
-        results_ft
-        results_et
-        results_rt
-        hillclimb
+  -  results_ft
+  -  results_et
+  -  results_rt
+  -  hillclimb
+
+# Used to protect the config from multiple edits
+save_ver: 1
