Get  results to static to take values     from the YAML configuration file

--- a/etc/timing/timing_HSVFest.conf
+++ b/etc/timing/timing_HSVFest.conf
@@ -31,6 +31,7 @@ results:
   web_base: "/var/www/html/HSV_Timing/"
   php_base: "/var/www/html/HSV_Timing/management/"
   static_base: "/var/www/html/HSV_Timing/Results/"
+  forward_results_command: forward_results
   static_refresh: 60
   runners_only: false
   result_types:
