--- a/etc/timing/timing_Huntley.conf
+++ b/etc/timing/timing_Huntley.conf
@@ -31,10 +31,11 @@ results:
   web_base: "/var/www/html/HSV_Timing/"
   php_base: "/var/www/html/HSV_Timing/management/"
   static_base: "/var/www/html/HSV_Timing/Results/"
+  forward_results_command: "forward_results"
   static_refresh: 16
   runners_only: false
   result_types:
-  -  hillclimb
+  -  hillclimb_1 hillclimb
 
 # Used to protect the config from concurrent edits
 save_ver: 1
