Fix start edge trigger
Huntly's start trigger (all Huntley triggers) are on rising edge.

--- a/etc/timing/timing_Huntley.conf
+++ b/etc/timing/timing_Huntley.conf
@@ -18,7 +18,7 @@ timing:
         
     start: 
         gpio: 24
-        falling_edge: true
+        falling_edge: false
         
     finish: 
         gpio: 25
