Change YAML headings from YAML 1.2 to 1.1
The PHP YAML reader only handles 1.1

--- a/etc/timing/timing_HSVFest.conf
+++ b/etc/timing/timing_HSVFest.conf
@@ -1,5 +1,7 @@
-%YAML 1.2
+%YAML 1.1
 ---
+# Note the PHP YAML reader only handles 1.1
+
 # Path to the sqlite database
 database_path: "/data/Track_Time/Track_Time.db"
 
