--- a/etc/timing/timing_Huntley.conf
+++ b/etc/timing/timing_Huntley.conf
@@ -1,5 +1,7 @@
-%YAML 1.2
+%YAML 1.1
 ---
+# Note the PHP YAML reader only handles 1.1
+
 # Path to the sqlite database
 database_path: "/data/Track_Time/Track_Time.db"
 
