Add comments and a title to the default configs
The title and comment are only used for information
when selecting from the list of available configs.

--- a/etc/timing/timing_HSVFest.conf
+++ b/etc/timing/timing_HSVFest.conf
@@ -2,6 +2,9 @@
 ---
 # Note the PHP YAML reader only handles 1.1
 
+title: "HSVFest Track"
+comment: "Drag style tree with reaction time and red light"
+
 # Path to the sqlite database
 database_path: "/data/Track_Time/Track_Time.db"
 
@@ -40,7 +43,8 @@ results:
   -  results_ft
   -  results_et
   -  results_rt
-  -  hillclimb
+  -  hillclimb_1
 
 # Used to protect the config from concurrent edits
 save_ver: 1
+...
