--- a/etc/timing/timing_Huntley.conf
+++ b/etc/timing/timing_Huntley.conf
@@ -2,6 +2,9 @@
 ---
 # Note the PHP YAML reader only handles 1.1
 
+title: "Huntley Hillclimb"
+comment: "Hillclimb style start and timing - use start table for split 1"
+
 # Path to the sqlite database
 database_path: "/data/Track_Time/Track_Time.db"
 
@@ -37,7 +40,8 @@ results:
   static_refresh: 16
   runners_only: false
   result_types:
-  -  hillclimb_1 hillclimb
+  -  hillclimb
 
 # Used to protect the config from concurrent edits
 save_ver: 1
+...
