More changes for debian packaging
Moved binaries from  /usr/local/bin  to  /usr/bin  and  /usr/sbin
Changed  timing.py  to  timingd

Moved web stuff back to   /var/www  for now

--- a/etc/lighttpd/conf-enabled/20-status_websockets.conf
+++ b/etc/lighttpd/conf-enabled/20-status_websockets.conf
@@ -8,7 +8,7 @@ wstunnel.server = (
   "/ws/status/green/" => (
     (
       "socket" => "/dev/shm/g_sock",
-      "bin-path" => "/usr/local/bin/i_watcher /data/state_Green",
+      "bin-path" => "/usr/bin/i_watcher /data/state_Green",
       "listen-backlog" => 1,
       "max-load-per-proc" => 1,
       "max-procs" => 2
@@ -17,7 +17,7 @@ wstunnel.server = (
   "/ws/status/start/" => (
     (
       "socket" => "/dev/shm/s_sock",
-      "bin-path" => "/usr/local/bin/i_watcher /data/state_Start",
+      "bin-path" => "/usr/bin/i_watcher /data/state_Start",
       "listen-backlog" => 1,
       "max-load-per-proc" => 1,
       "max-procs" => 2
@@ -26,7 +26,7 @@ wstunnel.server = (
   "/ws/status/split1/" => (
     (
       "socket" => "/dev/shm/s1_sock",
-      "bin-path" => "/usr/local/bin/i_watcher /data/state_Split1",
+      "bin-path" => "/usr/bin/i_watcher /data/state_Split1",
       "listen-backlog" => 1,
       "max-load-per-proc" => 1,
       "max-procs" => 2
@@ -35,7 +35,7 @@ wstunnel.server = (
   "/ws/status/split2/" => (
     (
       "socket" => "/dev/shm/s2_sock",
-      "bin-path" => "/usr/local/bin/i_watcher /data/state_Split2",
+      "bin-path" => "/usr/bin/i_watcher /data/state_Split2",
       "listen-backlog" => 1,
       "max-load-per-proc" => 1,
       "max-procs" => 2
@@ -44,7 +44,7 @@ wstunnel.server = (
   "/ws/status/finish/" => (
     (
       "socket" => "/dev/shm/f_sock",
-      "bin-path" => "/usr/local/bin/i_watcher /data/state_Finish",
+      "bin-path" => "/usr/bin/i_watcher /data/state_Finish",
       "listen-backlog" => 1,
       "max-load-per-proc" => 1,
       "max-procs" => 2
