--- a/bin/Makefile
+++ b/bin/Makefile
@@ -1,5 +1,5 @@
 
-BIN_SCRIPTS = timing.py results_conf results_to_static forward_results get_times
+BIN_SCRIPTS = timingd results_conf results_to_static forward_results get_times
 
 SBIN_SCRIPTS = home_tunnel web_redir web_redir_mgmt
 
