Try to set perms on  /data  correctly

--- a/debian/rules
+++ b/debian/rules
@@ -6,3 +6,9 @@
 
 %:
 	dh $@
+
+
+execute_after_dh_fixperms:
+	chown www-data:www-data $(DESTDIR)/data $(DESTDIR)/data/Track_Time
+	chmod 2775 $(DESTDIR)/data
+	chmod 2770 $(DESTDIR)/data/Track_Time
