--- a/debian/rules
+++ b/debian/rules
@@ -9,10 +9,12 @@
 
 
 execute_after_dh_fixperms:
-	chown www-data:www-data debian/tracktiming/data debian/tracktiming/etc/lighttpd/auth
-	chmod 500 debian/tracktiming/data debian/tracktiming/etc/lighttpd/auth
-	chown www-data:www-data debian/tracktiming/data debian/tracktiming/etc/lighttpd/auth/lighttpd.user
-	chmod 400 debian/tracktiming/data debian/tracktiming/etc/lighttpd/auth/lighttpd.user
+	chgrp www-data debian/tracktiming/etc/timing
+	chmod 1775     debian/tracktiming/etc/timing
+	chown www-data:www-data debian/tracktiming/etc/lighttpd/auth
+	chmod 500               debian/tracktiming/etc/lighttpd/auth
+	chown www-data:www-data debian/tracktiming/etc/lighttpd/auth/lighttpd.user
+	chmod 400               debian/tracktiming/etc/lighttpd/auth/lighttpd.user
 	chown www-data:www-data debian/tracktiming/data debian/tracktiming/data/Track_Time
 	chmod 2775 debian/tracktiming/data
 	chmod 2770 debian/tracktiming/data/Track_Time
