Add a script to create a blank database, and fix the perms Slight tweak to home_tunnel

--- a/bin/Makefile
+++ b/bin/Makefile
@@ -1,7 +1,7 @@
 
 BIN_SCRIPTS = timingd results_conf results_to_static forward_results get_times
 
-SBIN_SCRIPTS = home_tunnel web_redir web_redir_mgmt
+SBIN_SCRIPTS = home_tunnel web_redir web_redir_mgmt CreateTimingDatabase
 
 CreateDatabase = Create_Database.sql
 
