Add extra Web Socket for new car
timingd				to update new state file
20-status_websockets.conf	Config web socket
run_status.php			Do refresh on new web socket

--- a/etc/lighttpd/conf-enabled/20-status_websockets.conf
+++ b/etc/lighttpd/conf-enabled/20-status_websockets.conf
@@ -5,6 +5,15 @@
 server.modules += ("mod_wstunnel")
 
 wstunnel.server = (
+  "/ws/status/newcar/" => (
+    (
+      "socket" => "/dev/shm/n_sock",
+      "bin-path" => "/usr/bin/i_watcher /data/state_NewCar",
+      "listen-backlog" => 1,
+      "max-load-per-proc" => 1,
+      "max-procs" => 2
+    )
+  ),
   "/ws/status/green/" => (
     (
       "socket" => "/dev/shm/g_sock",
