Add web buttons for testing without hardware
run_management_hillclimb.html	Added resize to the panels

run_management_hillclimb_test.html   Added sub panel with buttons above runner list
fake_buttons.html		The subpanel with the buttons/javascript
20-status_websockets.conf	Definition of websocket - redirect to 127.0.0.1:399
fake_buttons.socket		Listener definition for  127.0.0.1:399
fake_buttons@.service		Service definition for fake_buttons websocket
bin/fake_buttons		Shell script that implements the fake buttons protocol over the websocket

bin/Makefile			Put fake_buttons into /usr/sbin

compare				Update compare to handle that local bin goes to both  bin & sbin

fake_buttons protocol

The words  "green", "start", "split1", "finish"  will trigger the matching
events being sent to  timingd

The word  "run" folowed by a number will trigger an automatic sequence of
 green,start,split1,finish  with random timing withing 10% of the number provided

The word  "runs"  followed by 2 numbers will trigger a number of auto runs.
 the first number is howmany runs, the second is the target time.

As well as performing each event, the server will send a message with the
text of the event back over the websocket to update a status field on the page.

After 40s without any events being commanded, the server side will send a
message "  \n"  to keep the connection alive.  This will also overwrite the
status field, so the last operation is not sitting there forever.

On receiving a message, the client will send back a ' '.  This is mainly to
keep the websocket open when doing long auto run operations.

--- a/bin/Makefile
+++ b/bin/Makefile
@@ -2,7 +2,7 @@
 BIN_SCRIPTS = timingd results_conf results_to_static forward_results get_times send_times
 
 #SBIN_SCRIPTS = home_tunnel web_redir web_redir_mgmt CreateTimingDatabase
-SBIN_SCRIPTS = home_tunnel CreateTimingDatabase
+SBIN_SCRIPTS = home_tunnel CreateTimingDatabase fake_buttons
 
 CreateDatabase = Create_Database.sql
 
