--- a/etc/lighttpd/conf-enabled/20-status_websockets.conf
+++ b/etc/lighttpd/conf-enabled/20-status_websockets.conf
@@ -58,5 +58,12 @@ wstunnel.server = (
       "max-load-per-proc" => 1,
       "max-procs" => 2
     )
+  ),
+  "/ws/debug/fake_buttons/" => (
+    (
+      "host" => "127.0.0.1",
+      "port" => "399",
+      "listen-backlog" => 1
+    )
   )
 )
