Previous update to formatting broke the split on same line
The config I was trying to fix was "split on same line" that was
being squished onto two lines.

Did a better fix, and now can select own or same line.

Also updated Huntley defaults.

--- a/etc/timing/timing_Huntley.conf
+++ b/etc/timing/timing_Huntley.conf
@@ -14,7 +14,7 @@ database_path: "/data/Track_Time/Track_Time.db"
 timing:
   inputs:
     button: 
-        gpio: 17
+        gpio: 22
         falling_edge: false
 
     green: 
@@ -38,7 +38,10 @@ results:
   static_base: "/var/www/html/HSV_Timing/Results/"
   forward_results_command: "forward_results"
   static_refresh: 16
+  web_push: 20
   runners_only: false
+  csv_quotes: false
+  split_line: true
   result_types:
   -  hillclimb
 
