Fix some syntax errors
Cannot use  ()  in bash  let  on the older  pi4b

Forgot to convert some  elif's  to  if's

Not using  split1  &  split2  websockets
Just  split

--- a/etc/lighttpd/conf-enabled/20-status_websockets.conf
+++ b/etc/lighttpd/conf-enabled/20-status_websockets.conf
@@ -32,19 +32,10 @@ wstunnel.server = (
       "max-procs" => 2
     )
   ),
-  "/ws/status/split1/" => (
+  "/ws/status/split/" => (
     (
       "socket" => "/dev/shm/s1_sock",
-      "bin-path" => "/usr/bin/i_watcher /data/state_Split1",
-      "listen-backlog" => 1,
-      "max-load-per-proc" => 1,
-      "max-procs" => 2
-    )
-  ),
-  "/ws/status/split2/" => (
-    (
-      "socket" => "/dev/shm/s2_sock",
-      "bin-path" => "/usr/bin/i_watcher /data/state_Split2",
+      "bin-path" => "/usr/bin/i_watcher /data/state_Split",
       "listen-backlog" => 1,
       "max-load-per-proc" => 1,
       "max-procs" => 2
