Add more connections for the websockets

--- a/etc/lighttpd/conf-enabled/20-status_websockets.conf
+++ b/etc/lighttpd/conf-enabled/20-status_websockets.conf
@@ -9,52 +9,57 @@ wstunnel.server = (
     (
       "socket" => "/dev/shm/n_sock",
       "bin-path" => "/usr/bin/i_watcher /data/state_NewCar",
-      "listen-backlog" => 1,
-      "max-load-per-proc" => 1,
-      "max-procs" => 2
+      "listen-backlog" => 4,
+      "max-load-per-proc" => 4,
+      "min-procs" => 7,
+      "max-procs" => 10
     )
   ),
   "/ws/status/green/" => (
     (
       "socket" => "/dev/shm/g_sock",
       "bin-path" => "/usr/bin/i_watcher /data/state_Green",
-      "listen-backlog" => 1,
-      "max-load-per-proc" => 1,
-      "max-procs" => 2
+      "listen-backlog" => 2,
+      "max-load-per-proc" => 2,
+      "min-procs" => 5,
+      "max-procs" => 6
     )
   ),
   "/ws/status/start/" => (
     (
       "socket" => "/dev/shm/s_sock",
       "bin-path" => "/usr/bin/i_watcher /data/state_Start",
-      "listen-backlog" => 1,
-      "max-load-per-proc" => 1,
-      "max-procs" => 2
+      "listen-backlog" => 2,
+      "max-load-per-proc" => 2,
+      "min-procs" => 5,
+      "max-procs" => 6
     )
   ),
   "/ws/status/split/" => (
     (
       "socket" => "/dev/shm/s1_sock",
       "bin-path" => "/usr/bin/i_watcher /data/state_Split",
-      "listen-backlog" => 1,
-      "max-load-per-proc" => 1,
-      "max-procs" => 2
+      "listen-backlog" => 2,
+      "max-load-per-proc" => 2,
+      "min-procs" => 5,
+      "max-procs" => 6
     )
   ),
   "/ws/status/finish/" => (
     (
       "socket" => "/dev/shm/f_sock",
       "bin-path" => "/usr/bin/i_watcher /data/state_Finish",
-      "listen-backlog" => 1,
-      "max-load-per-proc" => 1,
-      "max-procs" => 2
+      "listen-backlog" => 2,
+      "max-load-per-proc" => 2,
+      "min-procs" => 5,
+      "max-procs" => 6
     )
   ),
   "/ws/debug/fake_buttons/" => (
     (
       "host" => "127.0.0.1",
       "port" => "399",
-      "listen-backlog" => 1
+      "listen-backlog" => 2
     )
   )
 )
